--- a/frontend/cypress/tsconfig.json
+++ b/frontend/cypress/tsconfig.json
@@ -1,10 +1,7 @@
 {
-  "extends": "../tsconfig.json",
-  "include": ["**/*.ts"],
   "compilerOptions": {
-    "sourceMap": false,
-    "typeRoots": ["./support"],
-    "types": ["cypress", "@testing-library/cypress"],
-    "target": "ES2019"
-  }
+    "target": "es2023",
+    "types": ["cypress", "node"],
+  },
+  "include": ["**/*.ts"],
 }
