--- a/user-administration-security/src/test/resources/application-integration-test.yml
+++ b/user-administration-security/src/test/resources/application-integration-test.yml
@@ -1,9 +1,4 @@
 spring:
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-    username: sa
-    password: sa
   h2:
     console:
       enabled: true
@@ -15,6 +10,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    generate-ddl: true
 logging:
   level:
     root: ERROR
